--- a/src/pl/waw/sgh/bank/gui/ExampleUI.form
+++ b/src/pl/waw/sgh/bank/gui/ExampleUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="pl.waw.sgh.bank.GUIMonika.ExampleUI">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="pl.waw.sgh.bank.gui.ExampleUI">
+  <grid id="27dc6" binding="customerMainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="572"/>
@@ -143,7 +143,7 @@
           <foreground color="-1"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
-          <text value="ACCOUNT FORM"/>
+          <text value="CUSTOMER FORM"/>
           <verticalAlignment value="0"/>
           <verticalTextPosition value="0"/>
         </properties>
