Fully working Customer UI

--- a/src/pl/waw/sgh/bank/gui/ExampleUI.form
+++ b/src/pl/waw/sgh/bank/gui/ExampleUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="customerMainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="572"/>
+      <xy x="20" y="20" width="560" height="572"/>
     </constraints>
     <properties>
       <background color="-12879743"/>
@@ -156,7 +156,7 @@
           <text value="Go to Account Activities"/>
         </properties>
       </component>
-      <grid id="622d7" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="622d7" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -176,7 +176,7 @@
           </component>
           <component id="aaf60" class="javax.swing.JButton" binding="nextButton">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="&gt;"/>
@@ -184,13 +184,21 @@
           </component>
           <component id="eedac" class="javax.swing.JButton" binding="saveButton" default-binding="true">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <minimum-size width="300" height="-1"/>
                 <preferred-size width="300" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <text value="Save"/>
+            </properties>
+          </component>
+          <component id="a4a0a" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Delete"/>
             </properties>
           </component>
         </children>
